# c-sand

./: .clang-format  CMakeLists.txt  README.md  shell.nix
App/: CMakeLists.txt
App/src/: main.c
App/src/core/: cell.h  grid.c  grid.h  grid_cache.c  grid_cache.h  simulation.c  simulation.h  theme.h
App/src/core/elements/: cache.c  cache.h  id.h  objects.h  template.h
App/src/core/elements/update/: empty.c  empty.h  sand.c  sand.h
App/src/render/grid/: cache.c  renderer.c  renderer.h
App/src/sim/: grid.c  grid.h  grid_def.h  simulation.c  simulation.h
App/src/sim/elements/: id.h  table.c  table.h  template.h  update_utils.c  update_utils.h
App/src/sim/elements/update/: empty.c  empty.h  sand.c  sand.h  water.c  water.h
App/src/ui/: button.c  button.h  theme.c  theme.h
App/src/ui/themes/: catppuccin_mocha.c  catppuccin_mocha.h
App/src/utils/: clock.c  clock.h
Gui/: CMakeLists.txt
Ui/: CMakeLists.txt
Ui/Ui/: button.c  button.h
scripts/: profile.sh
src/: main.c
src/simulation/: cell.h  grid.c  grid.h  simulation.h
src/ui/: button.h  theme.c  theme.h
tools/: debug.sh  run.sh
